updated the all the endpoints
